AC_INIT([titanite-compiler], [2022.9.9], [alexandervonberkov1@gmail.com])
AC_PREREQ([2.68]) # autoconfig version >= 2.68
AC_CONFIG_SRCDIR([main.c]) # safety: file must exist
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror subdir-objects foreign]) # init automake

AC_PROG_CC # find and probe c compiler

AC_CONFIG_FILES([Makefile])

AC_OUTPUT